--- a/thenetninja/css/index.css
+++ b/thenetninja/css/index.css
@@ -176,7 +176,7 @@ img {
   background-color: #1ac888;
 }
 
-.navbar .container, .navbar {
+.navbar .container, .navbar-primary .container, .navbar, .navbar-primary {
   width: 100%;
   display: flex;
   align-items: center;
@@ -184,12 +184,15 @@ img {
   box-sizing: border-box;
 }
 
-.navbar {
+.navbar, .navbar-primary {
   padding: 0.75rem 1.5rem;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
 }
-.navbar .site-title {
+.navbar .site-title, .navbar-primary .site-title {
   font-size: 1.5rem;
+}
+.navbar-primary {
+  background-color: crimson;
 }
 
 .badge-orange {
