--- a/thenetninja/css/index.css
+++ b/thenetninja/css/index.css
@@ -192,7 +192,7 @@ img {
   font-size: 1.5rem;
 }
 .navbar-primary {
-  background-color: crimson;
+  background-color: indigo;
 }
 
 .badge-orange {
